--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row" style="height: 100vh;">
+    <div class="col-md-4 offset-md-1">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-md-6 offset-md-1">
+      <div class="image-container"></div>
+    </div>
+  </div>
+</div>
