--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,57 +1,49 @@
-<div class="container-fluid">
-  <div class="row" style="height: 100vh;">
-    <div class="col-md-4 offset-md-1">
-      
-      <div style="margin-top: 20vh;">
-        <p>
-          <!-- <img src="../../../assets/garbage.svg" width="50px" alt=""> -->
-        </p>
-        <!-- <p class="bindoo-subtitle">Welcome to</p> -->
-        <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span></h1>
-        
-        <p>
-          <mat-form-field appearance="outline" class="bindoo-full-width">
-            <mat-label>Username / Email</mat-label>
-            <input matInput placeholder="abc@bindoo.com">
-            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-            <!-- <mat-hint>Who are you?</mat-hint> -->
-          </mat-form-field>
-        </p>
-        
-        <p>
-          <mat-form-field appearance="outline" class="bindoo-full-width">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" type="password">
-            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-            <mat-hint>
-              <a href="#">Forgot Password?</a>
-            </mat-hint>
-          </mat-form-field>
-        </p>
-        
-        <p>
-          <button mat-raised-button class="bindoo-full-width" color="primary" style="height: 50px;">Login</button>
-        </p>
-        <div style="text-align: center; margin-bottom: 15vh; font-size: 16px;">
-          <small class="bindoo-full-width">
-            Dont have an account? <a href="#">Signup</a>
-          </small>
-        </div>
-      </div>
+<div style="margin-top: 20vh;">
+  <p>
+    <!-- <img src="../../../assets/garbage.svg" width="50px" alt=""> -->
+  </p>
+  <!-- <p class="bindoo-subtitle">Welcome to</p> -->
+  <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span
+      style="color: #444;">doo</span></h1>
 
-      <small style="color: #666;">
+  <p>
+    <mat-form-field appearance="outline" class="bindoo-full-width">
+      <mat-label>Username / Email</mat-label>
+      <input matInput placeholder="abc@bindoo.com">
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <!-- <mat-hint>Who are you?</mat-hint> -->
+    </mat-form-field>
+  </p>
 
-        <b style="font-size: 18px;"><span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span></b> makes it easy for you to manage your accounts or view local information on the go. 
-        
-        <br><br>Getting started is easy. Use your
-        address to access pickup and holiday schedules or local community information. You can also log in or register to manage
-        your account, billing, and services.
+  <p>
+    <mat-form-field appearance="outline" class="bindoo-full-width">
+      <mat-label>Password</mat-label>
+      <input matInput placeholder="Password" type="password">
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <mat-hint>
+        <a href="#">Forgot Password?</a>
+      </mat-hint>
+    </mat-form-field>
+  </p>
 
-      </small>
-
-    </div>
-    <div class="col-md-6 offset-md-1">
-      <div class="image-container"></div>
-    </div>
+  <p>
+    <button mat-raised-button class="bindoo-full-width" color="primary" style="height: 50px;">Login</button>
+  </p>
+  <div style="text-align: center; margin-bottom: 15vh; font-size: 16px;">
+    <small class="bindoo-full-width">
+      Dont have an account? <a href="#">Signup</a>
+    </small>
   </div>
 </div>
+
+<small style="color: #666;">
+
+  <b style="font-size: 18px;"><span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span></b> makes it
+  easy for you to manage your accounts or view local information on the go.
+
+  <br><br>Getting started is easy. Use your
+  address to access pickup and holiday schedules or local community information. You can also log in or register to
+  manage
+  your account, billing, and services.
+
+</small>
