--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,7 +31,7 @@
   </p>
   <div style="text-align: center; margin-bottom: 15vh; font-size: 16px;">
     <small class="bindoo-full-width">
-      Dont have an account? <a href="#">Signup</a>
+      Dont have an account? <a [routerLink]="['/signup']" >Signup</a>
     </small>
   </div>
 </div>
