--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <div class="row" style="height: 100vh;">
     <div class="col-md-4 offset-md-1">
-      <router-outlet></router-outlet>
+      <div [@routeAnimations]="prepareRoute(outlet)">
+          <router-outlet #outlet="outlet"></router-outlet>
+      </div>
     </div>
     <div class="col-md-6 offset-md-1">
       <div class="image-container"></div>
