Added validation to login page

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar>
+  <img src="../../../assets/garbage.svg" width="28px" alt="">&nbsp;&nbsp;
   <span>
-    <img src="../../../assets/garbage.svg" width="20px" alt="">&nbsp;
-    bindoo
+    <span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span>
   </span>
 </mat-toolbar>
 
 <div class="container">
-  <p>Locations</p>
+  <p style="font-size: 20px; font-weight: 500; color: #555;">Locations</p>
 
   <div class="row">
     <div class="col-md-3">
@@ -16,7 +16,7 @@
 
           <mat-chip-list aria-label="Fish selection">
             <mat-chip color="primary" selected>Approved</mat-chip>
-            <mat-chip color="accent" selected>Pending Approval</mat-chip>
+            <!-- <mat-chip color="accent" selected>Pending Approval</mat-chip> -->
           </mat-chip-list>
 
           <h3 style="margin-bottom: 10px;">Home</h3> 
@@ -40,7 +40,7 @@
         <mat-card-content>
     
           <mat-chip-list aria-label="Fish selection">
-            <mat-chip color="primary" selected>Approved</mat-chip>
+            <!-- <mat-chip color="primary" selected>Approved</mat-chip> -->
             <mat-chip color="accent" selected>Pending Approval</mat-chip>
           </mat-chip-list>
     
@@ -51,7 +51,7 @@
             Mankato Mississippi 96522</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color="primary">View Bins</button>
+          <button mat-raised-button color="primary" disabled>View Bins</button>
           <button mat-button color="warn" style="float: right;">
             Delete
           </button>
@@ -65,7 +65,7 @@
         <mat-card-content>
     
           <mat-chip-list aria-label="Fish selection">
-            <mat-chip color="primary" selected>Approved</mat-chip>
+            <!-- <mat-chip color="primary" selected>Approved</mat-chip> -->
             <mat-chip color="accent" selected>Pending Approval</mat-chip>
           </mat-chip-list>
     
@@ -76,7 +76,7 @@
             Mankato Mississippi 96522</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color="primary">View Bins</button>
+          <button mat-raised-button color="primary" disabled>View Bins</button>
           <button mat-button color="warn" style="float: right;">
             Delete
           </button>
