--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div class="col-md-6 offset-md-1">
-      <div class="image-container"></div>
+      <div class="hidden-xs" class="image-container"></div>
     </div>
   </div>
 </div>
