Added logout and fixed issue in email validation errors

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,6 +3,9 @@
   <span>
     <span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span>
   </span>
+  <span class="spacer"></span>
+  <button mat-raised-button color="accent" (click)="logout()">Logout</button>
+
 </mat-toolbar>
 
 <div class="container">
