--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -5,7 +5,7 @@
   <p class="bindoo-subtitle">Let us get started on</p>
   <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span
       style="color: #444;">doo</span></h1>
-  <small></small>
+  <small style="color: #aaa; font-size: 14px;">Step 1 / 3</small>
 
   <p>
     <mat-form-field appearance="outline" class="bindoo-full-width">
