Left panel design completed

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar>
+<app-left-panel></app-left-panel>
+
+<!-- <mat-toolbar>
   <img src="../../../assets/garbage.svg" width="28px" alt="">&nbsp;&nbsp;
   <span>
     <span style="color: #673ab7;">bin</span><span style="color: #444;">doo</span>
@@ -19,10 +21,9 @@
 
           <mat-chip-list aria-label="Fish selection">
             <mat-chip color="primary" selected>Approved</mat-chip>
-            <!-- <mat-chip color="accent" selected>Pending Approval</mat-chip> -->
           </mat-chip-list>
 
-          <h3 style="margin-bottom: 10px;">Home</h3> 
+          <h3 style="margin-bottom: 10px;">Home</h3>
           <small style="color: #aaa">Postal Address</small>
           <p style="margin-top: 5px;">Cecilia Chapman
             711-2880 Nulla St.
@@ -41,12 +42,11 @@
       <mat-card class="example-card">
         <img mat-card-image src="https://image.freepik.com/free-vector/street-map-with-pin-routes_23-2147622544.jpg">
         <mat-card-content>
-    
+
           <mat-chip-list aria-label="Fish selection">
-            <!-- <mat-chip color="primary" selected>Approved</mat-chip> -->
             <mat-chip color="accent" selected>Pending Approval</mat-chip>
           </mat-chip-list>
-    
+
           <h3 style="margin-bottom: 10px;">Home</h3>
           <small style="color: #aaa">Postal Address</small>
           <p style="margin-top: 5px;">Cecilia Chapman
@@ -66,12 +66,11 @@
       <mat-card class="example-card">
         <img mat-card-image src="https://image.freepik.com/free-vector/street-map-with-pin-routes_23-2147622544.jpg">
         <mat-card-content>
-    
+
           <mat-chip-list aria-label="Fish selection">
-            <!-- <mat-chip color="primary" selected>Approved</mat-chip> -->
             <mat-chip color="accent" selected>Pending Approval</mat-chip>
           </mat-chip-list>
-    
+
           <h3 style="margin-bottom: 10px;">Home</h3>
           <small style="color: #aaa">Postal Address</small>
           <p style="margin-top: 5px;">Cecilia Chapman
@@ -86,6 +85,6 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    
+
   </div>
-</div>
+</div> -->
