--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+* {
+  font-family: 'Open Sans', sans-serif !important;
+  font-size: 13px;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-a {
-    text-decoration: none;
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+ul li {
+  list-style: none;
+}
+
+a, a:hover {
+  text-decoration: none;
+}
+
+button:focus {
+  outline: 0;
 }
 
 
