--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <app-left-panel></app-left-panel>
 
+<div class="right-panel">
+  <router-outlet></router-outlet>
+</div>
+
 <!-- <mat-toolbar>
   <img src="../../../assets/garbage.svg" width="28px" alt="">&nbsp;&nbsp;
   <span>
