--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -9,41 +9,41 @@
 
   <div class="wrapper-menu">
     <ul>
-      <a routerLink="/locations">
+      <a routerLink="locations">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-location.svg" alt="Location icon">
           <p>Locations</p>
         </li>
       </a>
-      <a routerLink="/bin">
+      <a routerLink="bins">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-bin.svg" alt="Bin icon">
           <p>Bins</p>
         </li>
       </a>
 
-      <a routerLink="/store">
+      <a routerLink="store">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-store.svg" alt="Store icon">
           <p>Store</p>
         </li>
       </a>
 
-      <a routerLink="/vehicles">
+      <a routerLink="vehicles">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-vehicle.svg" alt="Vehicle icon">
           <p>Vehicles</p>
         </li>
       </a>
 
-      <a routerLink="/users">
+      <a routerLink="users">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-user.svg" alt="User icon">
           <p>Users</p>
         </li>
       </a>
 
-      <a (click)="onLogout()">
+      <a (click)="logout()">
         <li>
           <img src="/assets/icons/icon-logout.svg" alt="Logout icon">
           <p>Log out</p>
