Added email verification screen

--- a/src/app/pages/email-verification/email-verification.component.html
+++ b/src/app/pages/email-verification/email-verification.component.html
@@ -6,6 +6,11 @@
   <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span
       style="color: #444;">doo</span></h1>
   <small style="color: #aaa; font-size: 14px;">Step 2 / 3</small>
+  <p style="font-weight: 500;">Email Verification</p>
+
+  <p>We have sent you a verification email. Please check your inbox!</p>
+
+  <button mat-raised-button color="primary">Resend Email</button>
 
   
 </div>
