--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-* {
+/* * {
   font-family: 'Open Sans', sans-serif !important;
   font-size: 13px;
-}
+} */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 ul {
   padding: 0;
