--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -36,6 +36,13 @@
         </li>
       </a>
 
+      <a routerLink="vehicles">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-vehicle.svg" alt="Vehicle icon">
+          <p>Invoices</p>
+        </li>
+      </a>
+
       <a routerLink="users">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-user.svg" alt="User icon">
