--- a/src/app/pages/email-verification/email-verification.component.html
+++ b/src/app/pages/email-verification/email-verification.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 15vh;">
+<div style="margin-top: 15vh;" *ngIf="!Validating">
   <p>
     <!-- <img src="../../../assets/garbage.svg" width="50px" alt=""> -->
   </p>
