--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -1,6 +1,6 @@
 .image-container {
-  width: 100%;
   height: 100%;
   background-image: url('../../../assets/cute-bin.jpg');
   background-size: cover;
+  margin-right: -20px;
 }
