--- a/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
+++ b/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
@@ -8,74 +8,38 @@
 </header>
 
 <div class="row">
-  <div class="col-md-2">
-    <mat-card class="example-card">
-      <img mat-card-image src="https://image.freepik.com/free-vector/street-map-with-pin-routes_23-2147622544.jpg">
-      <mat-card-content>
+  <div class="col-md-12">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <mat-chip-list aria-label="Fish selection">
-          <mat-chip color="primary" selected>Approved</mat-chip>
-        </mat-chip-list>
-
-        <h3 style="margin-bottom: 10px;">Home</h3>
-        <small style="color: #aaa">Postal Address</small>
-        <p style="margin-top: 5px;">Cecilia Chapman
-          711-2880 Nulla St.
-          Mankato Mississippi 96522</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary">View Bins</button>
-        <button mat-button color="warn" style="float: right;">
-          Delete
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-  <div class="col-md-2">
-    <mat-card class="example-card">
-      <img mat-card-image src="https://image.freepik.com/free-vector/street-map-with-pin-routes_23-2147622544.jpg">
-      <mat-card-content>
-
-        <mat-chip-list aria-label="Fish selection">
-          <mat-chip color="accent" selected>Pending Approval</mat-chip>
-        </mat-chip-list>
-
-        <h3 style="margin-bottom: 10px;">Home</h3>
-        <small style="color: #aaa">Postal Address</small>
-        <p style="margin-top: 5px;">Cecilia Chapman
-          711-2880 Nulla St.
-          Mankato Mississippi 96522</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary" disabled>View Bins</button>
-        <button mat-button color="warn" style="float: right;">
-          Delete
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-
-  <div class="col-md-2">
-    <mat-card class="example-card">
-      <img mat-card-image src="https://image.freepik.com/free-vector/street-map-with-pin-routes_23-2147622544.jpg">
-      <mat-card-content>
-
-        <mat-chip-list aria-label="Fish selection">
-          <mat-chip color="accent" selected>Pending Approval</mat-chip>
-        </mat-chip-list>
-
-        <h3 style="margin-bottom: 10px;">Home</h3>
-        <small style="color: #aaa">Postal Address</small>
-        <p style="margin-top: 5px;">Cecilia Chapman
-          711-2880 Nulla St.
-          Mankato Mississippi 96522</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary" disabled>View Bins</button>
-        <button mat-button color="warn" style="float: right;">
-          Delete
-        </button>
-      </mat-card-actions>
-    </mat-card>
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element"> {{ element.email }} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="verified">
+        <th mat-header-cell *matHeaderCellDef>User type</th>
+        <td mat-cell *matCellDef="let element"> {{ element.userType }} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
 </div>
