--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -2,8 +2,8 @@
   <div class="wrapper-profile">
     <img src="/assets/icons/icon-user-avatar.svg" alt="Profile picture avata" class="profile-avatar">
     <div class="wrapper-text">
-      <h5>Mythreepala Sirisena</h5>
-      <p>Citizen</p>
+      <h5 class="name">James Charles</h5>
+      <p class="user-type">Citizen</p>
     </div>
   </div>
 
@@ -12,13 +12,13 @@
       <a routerLink="locations">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-location.svg" alt="Location icon">
-          <p>Locations</p>
+          <p>My Locations</p>
         </li>
       </a>
       <a routerLink="bins">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-bin.svg" alt="Bin icon">
-          <p>Bins</p>
+          <p>My Bins</p>
         </li>
       </a>
 
@@ -29,12 +29,12 @@
         </li>
       </a>
 
-      <a routerLink="vehicles">
+      <!-- <a routerLink="vehicles">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-vehicle.svg" alt="Vehicle icon">
           <p>Vehicles</p>
         </li>
-      </a>
+      </a> -->
 
       <a routerLink="vehicles">
         <li routerLinkActive="is-active">
@@ -43,12 +43,12 @@
         </li>
       </a>
 
-      <a routerLink="users">
+      <!-- <a routerLink="users">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-user.svg" alt="User icon">
           <p>Users</p>
         </li>
-      </a>
+      </a> -->
 
       <a (click)="logout()">
         <li>
