--- a/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
+++ b/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
@@ -1,15 +1,23 @@
 <header>
   <div class="row">
-    <div class="col-md-6">
-      <h3>Locations</h3>
+    <div class="col-md-8">
+      <h3>Locations</h3><br>
+      <small style="position: relative; top: -5px; margin-bottom: 1.5rem;">Find all locations created by you here</small><br>
       <button mat-raised-button color="primary" routerLink="add">+ Add location</button>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field appearance="outline" style="width: 100%;">
+        <mat-label>Search</mat-label>
+        <input matInput placeholder="Find locations using name and address">
+        <mat-hint>Find locations using their name and address</mat-hint>
+      </mat-form-field>
     </div>
   </div>
 </header>
 
 <div class="row">
   <div class="col-md-12">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="locations" class="mat-elevation-z8">
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
@@ -37,7 +45,10 @@
       <!-- Symbol Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
+        <td mat-cell *matCellDef="let element">
+          <button mat-flat-button color="primary">View</button>
+          <button mat-stroked-button color="warn">Remove</button>
+        </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
