--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ html, body { height: 100%; }
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f9fbfd;
 }
 
 ul {
@@ -63,4 +64,17 @@ button:focus {
 
 .bindoo-heading {
   margin-top: 0;
+}
+
+/* Buttons */
+button {
+  margin-right: 10px;
+}
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    transform: translateY(-1.1em) scale(.75);
+    width: 133.33333%;
 }
