--- a/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
@@ -1,8 +1,16 @@
 <header>
   <div class="row">
-    <div class="col-md-6">
-      <h3>Bins</h3>
-      <button mat-raised-button color="primary" routerLink="add">+ Add bins</button>
+    <div class="col-md-8">
+      <h3>Bins</h3><br>
+      <small style="position: relative; top: -5px; margin-bottom: 1.5rem;">View all bins from all your locations here</small><br>
+      <button mat-raised-button color="primary" routerLink="add">+ Add bin</button>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field appearance="outline" style="width: 100%;">
+        <mat-label>Search</mat-label>
+        <input matInput placeholder="Find bins using their name and location">
+        <mat-hint>Find bins using their name and location</mat-hint>
+      </mat-form-field>
     </div>
   </div>
 </header>
@@ -22,6 +30,12 @@
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>Description</th>
     <td mat-cell *matCellDef="let element"> {{ element.description }} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef>Location</th>
+    <td mat-cell *matCellDef="let element"> {{ element.location }} </td>
   </ng-container>
 
   <!-- Weight Column -->
